# darknet

./: .gitignore  CMakeLists.txt  autopass.sh  fraud-phones.sh  fraud_phones.sh
examples/: classifier.c  coco.c  detector.c  yolo.c
include/: darknet.h
python/: convert_for_markup_tool.py
src/: demo.c  image.c  image.h  network.c  yolo_layer.c
